--- a/final_assignment.ipynb
+++ b/final_assignment.ipynb
@@ -14,6 +14,454 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>state</th>\n",
+       "      <th>self_employed</th>\n",
+       "      <th>family_history</th>\n",
+       "      <th>treatment</th>\n",
+       "      <th>work_interfere</th>\n",
+       "      <th>no_employees</th>\n",
+       "      <th>...</th>\n",
+       "      <th>leave</th>\n",
+       "      <th>mental_health_consequence</th>\n",
+       "      <th>phys_health_consequence</th>\n",
+       "      <th>coworkers</th>\n",
+       "      <th>supervisor</th>\n",
+       "      <th>mental_health_interview</th>\n",
+       "      <th>phys_health_interview</th>\n",
+       "      <th>mental_vs_physical</th>\n",
+       "      <th>obs_consequence</th>\n",
+       "      <th>comments</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8/27/2014 11:29</td>\n",
+       "      <td>37</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Often</td>\n",
+       "      <td>25-Jun</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Somewhat easy</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Some of them</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Maybe</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8/27/2014 11:29</td>\n",
+       "      <td>44</td>\n",
+       "      <td>M</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Rarely</td>\n",
+       "      <td>More than 1000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Don't know</td>\n",
+       "      <td>Maybe</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Don't know</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8/27/2014 11:29</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Rarely</td>\n",
+       "      <td>25-Jun</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Somewhat difficult</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8/27/2014 11:29</td>\n",
+       "      <td>31</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Often</td>\n",
+       "      <td>26-100</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Somewhat difficult</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Some of them</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Maybe</td>\n",
+       "      <td>Maybe</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8/27/2014 11:30</td>\n",
+       "      <td>31</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Never</td>\n",
+       "      <td>100-500</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Don't know</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Some of them</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Don't know</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 27 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Timestamp  Age  Gender         Country state self_employed  \\\n",
+       "0  8/27/2014 11:29   37  Female   United States    IL           NaN   \n",
+       "1  8/27/2014 11:29   44       M   United States    IN           NaN   \n",
+       "2  8/27/2014 11:29   32    Male          Canada   NaN           NaN   \n",
+       "3  8/27/2014 11:29   31    Male  United Kingdom   NaN           NaN   \n",
+       "4  8/27/2014 11:30   31    Male   United States    TX           NaN   \n",
+       "\n",
+       "  family_history treatment work_interfere    no_employees  ...  \\\n",
+       "0             No       Yes          Often          25-Jun  ...   \n",
+       "1             No        No         Rarely  More than 1000  ...   \n",
+       "2             No        No         Rarely          25-Jun  ...   \n",
+       "3            Yes       Yes          Often          26-100  ...   \n",
+       "4             No        No          Never         100-500  ...   \n",
+       "\n",
+       "                leave mental_health_consequence phys_health_consequence  \\\n",
+       "0       Somewhat easy                        No                      No   \n",
+       "1          Don't know                     Maybe                      No   \n",
+       "2  Somewhat difficult                        No                      No   \n",
+       "3  Somewhat difficult                       Yes                     Yes   \n",
+       "4          Don't know                        No                      No   \n",
+       "\n",
+       "      coworkers supervisor mental_health_interview phys_health_interview  \\\n",
+       "0  Some of them        Yes                      No                 Maybe   \n",
+       "1            No         No                      No                    No   \n",
+       "2           Yes        Yes                     Yes                   Yes   \n",
+       "3  Some of them         No                   Maybe                 Maybe   \n",
+       "4  Some of them        Yes                     Yes                   Yes   \n",
+       "\n",
+       "  mental_vs_physical obs_consequence comments  \n",
+       "0                Yes              No      NaN  \n",
+       "1         Don't know              No      NaN  \n",
+       "2                 No              No      NaN  \n",
+       "3                 No             Yes      NaN  \n",
+       "4         Don't know              No      NaN  \n",
+       "\n",
+       "[5 rows x 27 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Raw_Data =pd.read_csv('survey.csv')\n",
+    "Raw_Data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>state</th>\n",
+       "      <th>self_employed</th>\n",
+       "      <th>family_history</th>\n",
+       "      <th>treatment</th>\n",
+       "      <th>work_interfere</th>\n",
+       "      <th>no_employees</th>\n",
+       "      <th>...</th>\n",
+       "      <th>leave</th>\n",
+       "      <th>mental_health_consequence</th>\n",
+       "      <th>phys_health_consequence</th>\n",
+       "      <th>coworkers</th>\n",
+       "      <th>supervisor</th>\n",
+       "      <th>mental_health_interview</th>\n",
+       "      <th>phys_health_interview</th>\n",
+       "      <th>mental_vs_physical</th>\n",
+       "      <th>obs_consequence</th>\n",
+       "      <th>comments</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8/27/2014 11:29</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Rarely</td>\n",
+       "      <td>25-Jun</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Somewhat difficult</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>8/27/2014 11:31</td>\n",
+       "      <td>33</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>TN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sometimes</td>\n",
+       "      <td>25-Jun</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Don't know</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Maybe</td>\n",
+       "      <td>Don't know</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8/27/2014 11:32</td>\n",
+       "      <td>42</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Sometimes</td>\n",
+       "      <td>100-500</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Very difficult</td>\n",
+       "      <td>Maybe</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Maybe</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>8/27/2014 11:32</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Never</td>\n",
+       "      <td>26-100</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Don't know</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Maybe</td>\n",
+       "      <td>Maybe</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>8/27/2014 11:32</td>\n",
+       "      <td>29</td>\n",
+       "      <td>male</td>\n",
+       "      <td>Bulgaria</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Never</td>\n",
+       "      <td>100-500</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Don't know</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Don't know</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 27 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Timestamp  Age  Gender        Country state self_employed  \\\n",
+       "2   8/27/2014 11:29   32    Male         Canada   NaN           NaN   \n",
+       "5   8/27/2014 11:31   33    Male  United States    TN           NaN   \n",
+       "8   8/27/2014 11:32   42  Female  United States    IL           NaN   \n",
+       "9   8/27/2014 11:32   23    Male         Canada   NaN           NaN   \n",
+       "11  8/27/2014 11:32   29    male       Bulgaria   NaN           NaN   \n",
+       "\n",
+       "   family_history treatment work_interfere no_employees  ...  \\\n",
+       "2              No        No         Rarely       25-Jun  ...   \n",
+       "5             Yes        No      Sometimes       25-Jun  ...   \n",
+       "8             Yes       Yes      Sometimes      100-500  ...   \n",
+       "9              No        No          Never       26-100  ...   \n",
+       "11             No        No          Never      100-500  ...   \n",
+       "\n",
+       "                 leave mental_health_consequence phys_health_consequence  \\\n",
+       "2   Somewhat difficult                        No                      No   \n",
+       "5           Don't know                        No                      No   \n",
+       "8       Very difficult                     Maybe                      No   \n",
+       "9           Don't know                        No                      No   \n",
+       "11          Don't know                        No                      No   \n",
+       "\n",
+       "   coworkers supervisor mental_health_interview phys_health_interview  \\\n",
+       "2        Yes        Yes                     Yes                   Yes   \n",
+       "5        Yes        Yes                      No                 Maybe   \n",
+       "8        Yes        Yes                      No                 Maybe   \n",
+       "9        Yes        Yes                   Maybe                 Maybe   \n",
+       "11       Yes        Yes                     Yes                   Yes   \n",
+       "\n",
+       "   mental_vs_physical obs_consequence comments  \n",
+       "2                  No              No      NaN  \n",
+       "5          Don't know              No      NaN  \n",
+       "8                  No              No      NaN  \n",
+       "9                 Yes              No      NaN  \n",
+       "11         Don't know              No      NaN  \n",
+       "\n",
+       "[5 rows x 27 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coworkers=Raw_Data[Raw_Data['coworkers'].str.contains(\"Yes\")]\n",
+    "coworkers.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
