--- a/final_assignment.ipynb
+++ b/final_assignment.ipynb
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -287,122 +287,122 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>0</th>\n",
        "      <td>8/27/2014 11:29</td>\n",
-       "      <td>32</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Rarely</td>\n",
-       "      <td>25-Jun</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Somewhat difficult</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>8/27/2014 11:31</td>\n",
-       "      <td>33</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>TN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Sometimes</td>\n",
-       "      <td>25-Jun</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Don't know</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Maybe</td>\n",
-       "      <td>Don't know</td>\n",
-       "      <td>No</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>8/27/2014 11:32</td>\n",
-       "      <td>42</td>\n",
+       "      <td>37</td>\n",
        "      <td>Female</td>\n",
        "      <td>United States</td>\n",
        "      <td>IL</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>No</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Sometimes</td>\n",
-       "      <td>100-500</td>\n",
+       "      <td>Often</td>\n",
+       "      <td>25-Jun</td>\n",
        "      <td>...</td>\n",
-       "      <td>Very difficult</td>\n",
-       "      <td>Maybe</td>\n",
+       "      <td>Somewhat easy</td>\n",
        "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Some of them</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>Maybe</td>\n",
-       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>7</th>\n",
        "      <td>8/27/2014 11:32</td>\n",
-       "      <td>23</td>\n",
-       "      <td>Male</td>\n",
+       "      <td>39</td>\n",
+       "      <td>M</td>\n",
        "      <td>Canada</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>Never</td>\n",
-       "      <td>26-100</td>\n",
+       "      <td>5-Jan</td>\n",
        "      <td>...</td>\n",
        "      <td>Don't know</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Maybe</td>\n",
-       "      <td>Maybe</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>8/27/2014 11:32</td>\n",
-       "      <td>29</td>\n",
+       "      <th>18</th>\n",
+       "      <td>8/27/2014 11:34</td>\n",
+       "      <td>46</td>\n",
        "      <td>male</td>\n",
-       "      <td>Bulgaria</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>MD</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sometimes</td>\n",
+       "      <td>5-Jan</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Very easy</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>8/27/2014 11:35</td>\n",
+       "      <td>36</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>France</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>25-Jun</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Somewhat easy</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Some of them</td>\n",
+       "      <td>Some of them</td>\n",
+       "      <td>Maybe</td>\n",
+       "      <td>Maybe</td>\n",
+       "      <td>Don't know</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>8/27/2014 11:35</td>\n",
+       "      <td>31</td>\n",
+       "      <td>male</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>NC</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>Never</td>\n",
-       "      <td>100-500</td>\n",
+       "      <td>5-Jan</td>\n",
        "      <td>...</td>\n",
-       "      <td>Don't know</td>\n",
+       "      <td>Somewhat difficult</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
+       "      <td>Some of them</td>\n",
+       "      <td>Some of them</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Maybe</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Don't know</td>\n",
        "      <td>No</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -413,51 +413,239 @@
       ],
       "text/plain": [
        "          Timestamp  Age  Gender        Country state self_employed  \\\n",
-       "2   8/27/2014 11:29   32    Male         Canada   NaN           NaN   \n",
-       "5   8/27/2014 11:31   33    Male  United States    TN           NaN   \n",
-       "8   8/27/2014 11:32   42  Female  United States    IL           NaN   \n",
-       "9   8/27/2014 11:32   23    Male         Canada   NaN           NaN   \n",
-       "11  8/27/2014 11:32   29    male       Bulgaria   NaN           NaN   \n",
+       "0   8/27/2014 11:29   37  Female  United States    IL           NaN   \n",
+       "7   8/27/2014 11:32   39       M         Canada   NaN           NaN   \n",
+       "18  8/27/2014 11:34   46    male  United States    MD           Yes   \n",
+       "19  8/27/2014 11:35   36    Male         France   NaN           Yes   \n",
+       "21  8/27/2014 11:35   31    male  United States    NC           Yes   \n",
        "\n",
        "   family_history treatment work_interfere no_employees  ...  \\\n",
-       "2              No        No         Rarely       25-Jun  ...   \n",
-       "5             Yes        No      Sometimes       25-Jun  ...   \n",
-       "8             Yes       Yes      Sometimes      100-500  ...   \n",
-       "9              No        No          Never       26-100  ...   \n",
-       "11             No        No          Never      100-500  ...   \n",
+       "0              No       Yes          Often       25-Jun  ...   \n",
+       "7              No        No          Never        5-Jan  ...   \n",
+       "18            Yes        No      Sometimes        5-Jan  ...   \n",
+       "19            Yes        No            NaN       25-Jun  ...   \n",
+       "21             No        No          Never        5-Jan  ...   \n",
        "\n",
        "                 leave mental_health_consequence phys_health_consequence  \\\n",
-       "2   Somewhat difficult                        No                      No   \n",
-       "5           Don't know                        No                      No   \n",
-       "8       Very difficult                     Maybe                      No   \n",
-       "9           Don't know                        No                      No   \n",
-       "11          Don't know                        No                      No   \n",
+       "0        Somewhat easy                        No                      No   \n",
+       "7           Don't know                        No                      No   \n",
+       "18           Very easy                        No                      No   \n",
+       "19       Somewhat easy                        No                      No   \n",
+       "21  Somewhat difficult                        No                      No   \n",
        "\n",
-       "   coworkers supervisor mental_health_interview phys_health_interview  \\\n",
-       "2        Yes        Yes                     Yes                   Yes   \n",
-       "5        Yes        Yes                      No                 Maybe   \n",
-       "8        Yes        Yes                      No                 Maybe   \n",
-       "9        Yes        Yes                   Maybe                 Maybe   \n",
-       "11       Yes        Yes                     Yes                   Yes   \n",
+       "       coworkers    supervisor mental_health_interview phys_health_interview  \\\n",
+       "0   Some of them           Yes                      No                 Maybe   \n",
+       "7             No            No                      No                    No   \n",
+       "18           Yes           Yes                      No                   Yes   \n",
+       "19  Some of them  Some of them                   Maybe                 Maybe   \n",
+       "21  Some of them  Some of them                      No                 Maybe   \n",
        "\n",
        "   mental_vs_physical obs_consequence comments  \n",
-       "2                  No              No      NaN  \n",
-       "5          Don't know              No      NaN  \n",
-       "8                  No              No      NaN  \n",
-       "9                 Yes              No      NaN  \n",
-       "11         Don't know              No      NaN  \n",
+       "0                 Yes              No      NaN  \n",
+       "7                  No              No      NaN  \n",
+       "18                Yes             Yes      NaN  \n",
+       "19         Don't know              No      NaN  \n",
+       "21                Yes              No      NaN  \n",
        "\n",
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "coworkers=Raw_Data[Raw_Data['coworkers'].str.contains(\"Yes\")]\n",
-    "coworkers.head()"
+    "anonymity=Raw_Data[Raw_Data['anonymity'].str.contains(\"Yes\")]\n",
+    "anonymity.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Austria</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bahamas, The</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Bulgaria</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Canada</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Costa Rica</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Croatia</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>France</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Ireland</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Israel</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Moldova</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Netherlands</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>New Zealand</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Nigeria</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Poland</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Russia</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Switzerland</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>124</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Country  count\n",
+       "0        Australia      4\n",
+       "1          Austria      1\n",
+       "2     Bahamas, The      1\n",
+       "3          Belgium      1\n",
+       "4           Brazil      3\n",
+       "5         Bulgaria      2\n",
+       "6           Canada     11\n",
+       "7       Costa Rica      1\n",
+       "8          Croatia      1\n",
+       "9          Finland      1\n",
+       "10          France      4\n",
+       "11         Germany     13\n",
+       "12         Ireland      3\n",
+       "13          Israel      1\n",
+       "14         Moldova      1\n",
+       "15     Netherlands      9\n",
+       "16     New Zealand      1\n",
+       "17         Nigeria      1\n",
+       "18          Poland      2\n",
+       "19          Russia      1\n",
+       "20     Switzerland      1\n",
+       "21  United Kingdom     38\n",
+       "22   United States    124"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "selectlocation_mentalhealth =coworkers.groupby(['Country'])['anonymity'].count().reset_index(name=\"count\")\n",
+    "selectlocation_mentalhealth .sort_values(\"count\", axis=0, ascending = False)\n",
+    "selectlocation_mentalhealth .head(100)"
    ]
   },
   {
