--- a/final_assignment.ipynb
+++ b/final_assignment.ipynb
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -450,19 +450,19 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "anonymity=Raw_Data[Raw_Data['anonymity'].str.contains(\"Yes\")]\n",
-    "anonymity.head()"
+    "mental_health_consequence_yes=Raw_Data[Raw_Data['mental_health_consequence'].str.contains(\"Yes\")]\n",
+    "mental_health_consequence_yes.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -661,20 +661,20 @@
        "26   United States    237"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "selectlocation_mentalhealth =anonymity.groupby(['Country'])['anonymity'].count().reset_index(name=\"count\")\n",
+    "selectlocation_mentalhealth =mental_health_consequence_yes.groupby(['Country'])['anonymity'].count().reset_index(name=\"count\")\n",
     "selectlocation_mentalhealth .sort_values(\"count\", axis=0, ascending = False)\n",
     "selectlocation_mentalhealth .head(100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2573,19 +2573,19 @@
        "[150 rows x 27 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "anonymity_Unitedstate=anonymity[anonymity['Country'].str.contains(\"United States\")]\n",
-    "anonymity_Unitedstate.head(150)"
+    "mental_health_consequence_Unitedstate=mental_health_consequence_yes[anonymity_yes['Country'].str.contains(\"United States\")]\n",
+    "mental_health_consequence_Unitedstate.head(150)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2634,28 +2634,28 @@
        "1            Yes    109"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "anonymity_Unitedstate=anonymity_Unitedstate.groupby(['family_history'])['family_history'].count().reset_index(name=\"count\")\n",
-    "anonymity_Unitedstate.head(100)"
+    "mental_health_consequence_Unitedstate=mental_health_consequence_Unitedstate.groupby(['family_history'])['family_history'].count().reset_index(name=\"count\")\n",
+    "mental_health_consequence_Unitedstate.head(100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ab273c5f60>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x18eca70f7b8>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2673,7 +2673,7 @@
     }
    ],
    "source": [
-    "anonymity_Unitedstate.plot.bar(x='family_history')"
+    "mental_health_consequence_Unitedstate.plot.bar(x='family_history')"
    ]
   },
   {
